tests/vertical-slice/accept/match_i32_literal_catchall_zero.hew
// Accept: a literal i32 match with a catch-all arm is exhaustive and exits 0.
fn main() -> i64 {
    let x: i32 = 2;
    match x {
        0 => 1,
        1 => 2,
        _ => 0,
    }
}
